add function to comment
